# glauc

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
.github/workflows/: qa.yaml
src/glauc/: __main__.py  main.py
